<resources>
    <string name="app_name">Eat Right Diet - Dietitian</string>
    <string name="breakfast">Breakfast</string>
    <string name="Early">Early Morning</string>
    <string name="Mid">Mid Morning</string>
    <string name="lunch">Lunch</string>
    <string name="eve">Evening</string>
    <string name="dinner">Dinner</string>
    <string name="postDinner">Post Dinner</string>

    <string name="sendImage">Send Image</string>
    <string name="sendPhotoGallery">Send Photo from Gallery</string>


    <string name="sendPhoto">Photo Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_picture_title">Get Photo From</string>

    <string name="api_key_google_places">AIzaSyBisbsq9wIW8Q2Isj033c3wXqtTBRyaRBA</string>
    <string name="sendLocation">Send Location</string>
    <string name="locationTo">Localização Enviada</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="save_notes">SaveNotes</string>
    <!--Array for the items in the spinner for weight in basic information activity-->
    <string-array name="weight_array">
        <item>Kg</item>
        <item>lbs</item>
    </string-array>
    <!--Array for the items in the spinner for diseases in basic information activity-->
    <string-array name="disease_array">
        <item>Diabetes</item>
        <item>High Blood Pressure</item>
        <item>Low Blood Pressure</item>
    </string-array>
    <string-array name="appointmentTypes">
        <item>In Person</item>
        <item>Call</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
